@@ -8,6 +8,7 @@ import lk.icbt.findit.entity.Item;
 import lk.icbt.findit.entity.Outlet;
 import lk.icbt.findit.exception.InvalidRequestException;
 import lk.icbt.findit.repository.CategoryRepository;
+import lk.icbt.findit.repository.DiscountItemRepository;
 import lk.icbt.findit.repository.ItemRepository;
 import lk.icbt.findit.repository.OutletRepository;
 import lk.icbt.findit.request.ItemRequest;
@@ -18,8 +19,7 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.Date;
-import java.util.List;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
@@ -29,6 +29,7 @@ public class ItemServiceImpl implements ItemService {
     private final ItemRepository itemRepository;
     private final CategoryRepository categoryRepository;
     private final OutletRepository outletRepository;
+    private final DiscountItemRepository discountItemRepository;
 
     @Override
     @Transactional
@@ -56,14 +57,15 @@ public class ItemServiceImpl implements ItemService {
         item.setVersion(1);
 
         Item saved = itemRepository.save(item);
-        return toResponse(saved, "Item created successfully.");
+        return toResponse(saved, itemIdsWithActiveDiscount(Collections.singletonList(saved.getItemId())), "Item created successfully.");
     }
 
     @Override
     public ItemResponse getById(Long itemId) {
         Item item = itemRepository.findById(itemId)
                 .orElseThrow(() -> new InvalidRequestException(ResponseCodes.ITEM_NOT_FOUND_CODE, "Item not found"));
-        return toResponse(item, null);
+        Set<Long> withDiscount = itemIdsWithActiveDiscount(Collections.singletonList(item.getItemId()));
+        return toResponse(item, withDiscount, null);
     }
 
     @Override
@@ -74,7 +76,8 @@ public class ItemServiceImpl implements ItemService {
         outletRepository.findById(outletId)
                 .orElseThrow(() -> new InvalidRequestException(ResponseCodes.OUTLET_NOT_FOUND_CODE, "Outlet not found"));
         List<Item> list = itemRepository.findByOutletId(outletId);
-        return list.stream().map(this::toListItem).collect(Collectors.toList());
+        Set<Long> withDiscount = list.isEmpty() ? Collections.emptySet() : itemIdsWithActiveDiscount(list.stream().map(Item::getItemId).toList());
+        return list.stream().map(i -> toListItem(i, withDiscount)).collect(Collectors.toList());
     }
 
     @Override
@@ -82,7 +85,8 @@ public class ItemServiceImpl implements ItemService {
         String searchParam = (search != null && !search.isBlank()) ? search.trim() : null;
         String statusParam = (status != null && !status.isBlank()) ? status.trim() : null;
         List<Item> list = itemRepository.search(searchParam, categoryId, outletId, statusParam, availability);
-        return list.stream().map(this::toListItem).collect(Collectors.toList());
+        Set<Long> withDiscount = list.isEmpty() ? Collections.emptySet() : itemIdsWithActiveDiscount(list.stream().map(Item::getItemId).toList());
+        return list.stream().map(i -> toListItem(i, withDiscount)).collect(Collectors.toList());
     }
 
     @Override
@@ -111,7 +115,7 @@ public class ItemServiceImpl implements ItemService {
         item.setModifiedDatetime(new Date());
 
         Item saved = itemRepository.save(item);
-        return toResponse(saved, "Item updated successfully.");
+        return toResponse(saved, itemIdsWithActiveDiscount(Collections.singletonList(saved.getItemId())), "Item updated successfully.");
     }
 
     @Override
@@ -126,7 +130,12 @@ public class ItemServiceImpl implements ItemService {
         return s != null ? s.trim() : null;
     }
 
-    private ItemResponse toResponse(Item i, String message) {
+    private Set<Long> itemIdsWithActiveDiscount(List<Long> itemIds) {
+        if (itemIds == null || itemIds.isEmpty()) return Collections.emptySet();
+        return new HashSet<>(discountItemRepository.findItemIdsWithActiveDiscount(itemIds, new Date()));
+    }
+
+    private ItemResponse toResponse(Item i, Set<Long> itemIdsWithActiveDiscount, String message) {
         ItemResponse r = new ItemResponse();
         r.setStatus(ResponseStatus.SUCCESS.getStatus());
         r.setResponseCode(ResponseCodes.SUCCESS_CODE);
@@ -141,12 +150,13 @@ public class ItemServiceImpl implements ItemService {
         r.setOutletName(i.getOutlet() != null ? i.getOutlet().getOutletName() : null);
         r.setPrice(i.getPrice());
         r.setAvailability(i.getAvailability());
+        r.setDiscountAvailability(itemIdsWithActiveDiscount != null && itemIdsWithActiveDiscount.contains(i.getItemId()));
         r.setItemImage(i.getItemImage());
         r.setStatus(i.getStatus());
         return r;
     }
 
-    private ItemListItemResponse toListItem(Item i) {
+    private ItemListItemResponse toListItem(Item i, Set<Long> itemIdsWithActiveDiscount) {
         ItemListItemResponse r = new ItemListItemResponse();
         r.setItemId(i.getItemId());
         r.setItemName(i.getItemName());
@@ -158,6 +168,7 @@ public class ItemServiceImpl implements ItemService {
         r.setOutletName(i.getOutlet() != null ? i.getOutlet().getOutletName() : null);
         r.setPrice(i.getPrice());
         r.setAvailability(i.getAvailability());
+        r.setDiscountAvailability(itemIdsWithActiveDiscount != null && itemIdsWithActiveDiscount.contains(i.getItemId()));
         r.setItemImage(i.getItemImage());
         r.setStatus(i.getStatus());
         return r;
